# real-chrome-crawler

./: .gitignore  CLAUDE.md  README.md  SKILL.md  main.py  pyproject.toml
docs/: PRD-real-chrome-crawler-v0.1.md  PRD-real-chrome-crawler-v0.2.md  STEP-01-scaffolding.md  STEP-02-chrome-launcher.md  STEP-03-cdp-session-collector.md  STEP-04-extractor-guards.md  STEP-05-skill-md-packaging.md
references/: selectors.md
scripts/: cdp_session.py  chrome_launcher.py  collector.py  console.py  extractor.py  guards.py
